[MOSIP-19195] Fixed UI Alignment issue in Mobile/Tablet/ios device

--- a/pre-registration-ui/src/app/feature/summary/acknowledgement/acknowledgement.component.css
+++ b/pre-registration-ui/src/app/feature/summary/acknowledgement/acknowledgement.component.css
@@ -79,7 +79,7 @@
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  margin: 4px 0 4px 1.2rem;
+  margin: 4px 0 4px 0.8rem;
   cursor: pointer;
   border-radius: 0;
 }
