--- a/pre-registration-ui/src/app/feature/summary/preview/preview.component.css
+++ b/pre-registration-ui/src/app/feature/summary/preview/preview.component.css
@@ -152,6 +152,7 @@ header {
   left: 0;
   padding: 2px 2vw;
   display: flex;
+  flex-wrap: wrap;
   z-index: 22;
 }
 .preview__file-container {
